--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
  "java.project.sourcePaths": [
     "State/GPCoder",
-    "Iterator/HeadFirstDesignPatterns"
+    "Iterator/HeadFirstDesignPatterns",
+    "Iterator/Exam"
 ]
 }
