--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
  "java.project.sourcePaths": [
     "State/GPCoder",
-    "Iterator/HeadFirstDesignPatterns",
-    "Iterator/Exam"
+    "Iterator/HeadFirstDesignPatterns"
 ]
 }
