--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
  "java.project.sourcePaths": [
+    "Visitor/ComputerPartTutorialsPoint",
     "State/GPCoder",
     "Iterator/HeadFirstDesignPatterns",
-    "Visitor/ComputerPartTutorialsPoint"
+    "Observer/DataSource_CodeWithMosh"
 ]
 }
