Add Prototype pattern example from GeeksForGeeks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
  "java.project.sourcePaths": [
     "Visitor/ComputerPartTutorialsPoint",
-    "State/GPCoder"
+    "State/GPCoder",
+    "Prototype/ColorGeeksForGeeks"
 ]
 }
