Add Vivlo pattern example Pizza

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
  "java.project.sourcePaths": [
     "Visitor/ComputerPartTutorialsPoint",
     "State/GPCoder",
-    "Adapter/VivloGraph"
+    "Adapter/VivloGraph",
+    "Decorator/Viblo"
 ]
 }
