Add Decorator problem in examCs2019 and UML

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
  "java.project.sourcePaths": [
     "Visitor/ComputerPartTutorialsPoint",
     "State/GPCoder",
+    "Decorator/Viblo",
     "Adapter/VivloGraph",
-    "Decorator/Viblo"
+    "Decorator/ExamCS2019"
 ]
 }
