Add Visitor problem in ExamCS2019 and UML

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,6 @@
     "Decorator/Viblo",
     "Decorator/ExamCS2019",
     "Adapter/VivloGraph",
-    "Facade/TutorialsShape"
+    "Visitor/ExamCS2019"
 ]
 }
