Add Composite class example Tournament

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,6 @@
     "Decorator/Viblo",
     "Decorator/ExamCS2019",
     "Composite/SEDTournament",
-    "Adapter/VivloGraph",
-    "Composite/SEDGraphic"
+    "Adapter/VivloGraph"
 ]
 }
