--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,6 @@
     "Decorator/Viblo",
     "Decorator/ExamCS2019",
     "Adapter/VivloGraph",
-    "Bridge/TutorialsShape"
+    "Builder/Viblo"
 ]
 }
